--- a/pr/package.json
+++ b/pr/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core": "1.2.4",
-    "@actions/github": "4.0.0"
+    "@actions/github": "4.0.0",
+    "shelljs": "0.8.4"
   },
   "devDependencies": {
     "@types/node": "14.0.23",
+    "@types/shelljs": "0.8.8",
     "@zeit/ncc": "0.22.3",
     "typescript": "3.9.6"
   }
